// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingIndicator /> CustomAriaLabel story renders snapshot 1`] = `
<div
  aria-label="Loading"
  class="css-11iqrt1 e11x7f5n1"
>
  <div
    class="css-1obf64m eo7r9jx1"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium eo7r9jx0 css-hx3qru-MuiSvgIcon-root"
      data-file-name="IconLoadingLarge"
      data-testid="IconLoadingLarge"
      fillcontrast="white"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    />
  </div>
  <span
    aria-label="Loading cats list..."
    aria-live="polite"
    class="css-fucilr e11x7f5n0"
    role="status"
  >
    Loading
  </span>
</div>
`;

exports[`<LoadingIndicator /> Default story renders snapshot 1`] = `
<div
  aria-label="Loading"
  class="css-11iqrt1 e11x7f5n1"
>
  <div
    class="css-1obf64m eo7r9jx1"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium eo7r9jx0 css-hx3qru-MuiSvgIcon-root"
      data-file-name="IconLoadingLarge"
      data-testid="IconLoadingLarge"
      fillcontrast="white"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    />
  </div>
  <span
    aria-live="polite"
    class="css-fucilr e11x7f5n0"
    role="status"
  >
    Loading
  </span>
</div>
`;
